<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FarmSanta</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="drawer_close">Close</string>
    <string name="back">Back</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="farm_calculator">Farm Calculator</string>
    <string name="seed_rate_image">Seedrate image</string>
    <string name="seed_rate">Seed Rate</string>
    <string name="plant_population">Plant Population</string>
    <string name="pesticide_calculator">Pesticide Calculator</string>
    <string name="fertilizer_calculator">Fertilizer Calculator</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="or_str">Or</string>
    <string name="verify">Verify</string>
    <string name="personal_profile">Your Profile</string>
    <string name="profile_image_close">Close</string>
    <string name="step1">Step 01</string>
    <string name="step1of3"> of 3</string>
    <string name="ten_percent">10% </string>
    <string name="step1_completed">Completed</string>
    <string name="take_pic_label">Take picture</string>
    <string name="name">Name</string>
    <string name="dob_label">Date of birth</string>
    <string name="education">Education</string>
    <string name="address">Address</string>
    <string name="q_h_no">Quarter no./House no./Strt name/SubVillage</string>
    <string name="country">Country</string>
    <string name="country_new">Country/Territory</string>
    <string name="state">State</string>
    <string name="pin">P O Box</string>
    <string name="gender">Gender</string>
    <string name="save_n_proceed">Save &amp; Proceed</string>
    <string name="comments">Comments</string>
    <string name="register">Register</string>
    <string name="crop">Crop</string>
    <string name="required_plant_populations" formatted="false">1000 Seed Weight: 50g\nGermination: 90%\nPurity: 95%\nRequired Plant population per area: 12500 Nos\nSeed Per hill : 2 Nos</string>
    <string name="calculate">Calculate</string>
    <string name="my_farm">My Farm</string>
    <string name="edit">Edit</string>
    <string name="view_all">View All</string>
    <string name="feature_coming_soon">The feature is in progress. It will be available soon</string>
    <string name="land_details">Land Details</string>
    <string name="add_land_details">Add Land Details</string>
    <string name="language">Language</string>
    <string name="get_started">Get Started</string>
    <string name="calculate_pesticide_qty">You can calculate the quantity of pesticide/ herbicide to be used for the area.</string>
    <string name="cultivable_area">Cultivable Area</string>
    <string name="seed_variety">Seed Variety</string>
    <string name="active_ingredients">Active Ingredient (AI)</string>
    <string name="recommended_qty">Recommended Quantity (g/L or ml/L)</string>
    <string name="tank_volume">Tank volume (liters)</string>
    <string name="truth_label_details">Truth Label Details</string>
    <string name="required_qty">Required Quantity</string>
    <string name="four_litres">4 litres</string>
    <string name="litres_per_hectare">3.25 litres per hectare (ha)</string>
    <string name="complete">Complete</string>
    <string name="my_crop">My Crop</string>
    <string name="my_crops">My Crops</string>
    <string name="pop">PoP</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="calculate_seeding_per_area">You can calculate the seeding rate per unit area. Sample description or user instruction.</string>
    <string name="kg">KG</string>
    <string name="kg_label">13.05</string>
    <string name="kg_per_hectare">10.2 kg per ha</string>
    <string name="lbs">Lbs</string>
    <string name="lbs_text">28.87</string>
    <string name="seed_rate_lbs">22.56 lbs per ha</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="farm_talk">Farm Talk</string>
    <string name="day_news">Day News</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="crop_info">Crop Information</string>
    <string name="get_all_info_crop">You will get all the information about the crop, expected yield and process.</string>
    <string name="text_layout_error_name_required">Required</string>
    <string name="text_layout_error_age">Age less than 15!</string>
    <string name="text_layout_error_country">Country missing</string>
    <string name="text_layout_error_region">Region missing</string>
    <string name="text_layout_error_state">State missing</string>
    <string name="text_layout_error_postbox">Post box number is mandatory</string>
    <string name="saving_profile">Saving profile</string>
    <string name="camera">Camera</string>
    <string name="graduate">Graduate</string>
    <string name="specialized_in_crop">Specialized in crop studies</string>
    <string name="post_graduate">Post Graduate</string>
    <string name="higher_secondary">Higher secondary</string>
    <string name="doctor">Doctor</string>
    <string name="metric_passed">Metric passed</string>
    <string name="primary_education">Primary education</string>
    <string name="nil">Nil</string>
    <string name="select_country">Select country</string>
    <string name="select_language">Select language</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="phone_no_invalid">Phone number invalid</string>
    <string name="crop_advisory">Crop Advisory</string>
    <string name="view_more">View More</string>
    <string name="add_caption">Add a caption</string>
    <string name="my_farms">My Farms</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="water_source">Water Source</string>
    <string name="saving_farm_scout">Saving Farm Scout</string>
    <string name="edit_farm">Edit Farm</string>
    <string name="from_str">from</string>
    <string name="farm_santa_label">FarmSanta</string>
    <string name="already_member_label">Already a member?</string>
    <string name="new_to_farm_santa">New to FarmSanta?</string>
    <string name="complete_profile_btn_label">Complete Your Profile</string>
    <string name="update_downloaded_successfully">Update is downloaded successfully</string>
    <string name="pop_library">POP Library</string>
    <string name="add_location">Add location</string>
    <string name="added_crop_to_bookmark">%1$s has been <br />added to your bookmarks!</string>
    <string name="view_pop">View POP</string>
    <string name="view_profile">Vew Profile</string>
    <string name="image_not_available">Image isn\'t available</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pin_code">Pin Code</string>
    <string name="add_image">Add Image</string>
    <string name="done">Done</string>
    <string name="secondary_number">Secondary Number</string>
    <string name="email">Email</string>
    <string name="add_address">Add Address</string>
    <string name="district">District</string>
    <string name="farm_size">Farm Size</string>
    <string name="add_crops">Add Crops</string>
    <string name="view_farm">View Farm</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_farm_talk">Farm Talk</string>
    <string name="bottom_nav_pop">POP</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="add">Add</string>
    <string name="title_home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="map_farmer_map">Map farmer’s farm</string>
    <string name="draw_farm_boundary">Draw Farm Boundary</string>
    <string name="skip_this_process">Skip This Process</string>
    <string name="soil_health">Soil health</string>
    <string name="land_info">Land info</string>
    <string name="scout">Scout</string>
    <string name="gallery">Gallery</string>
    <string name="post_image">Post Image</string>
    <string name="create_new_post">Create new post</string>
    <string name="view_post">View post</string>
    <string name="close">Close</string>
    <string name="log_out">Logout</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="today">Today</string>
    <string name="crop_advisory_inbox">Crop advisory inbox</string>
    <string name="search_farm_location">Search farm location</string>
    <string name="advisory">Advisory</string>
    <string name="location">Location</string>
    <string name="advisory_location">Advisory location</string>
    <string name="favourable_text"><ul><li> It occurs in cool, moist weather usually in early spring </li><br /><li> Spore production is favoured by temperatures cooler than 18˚C, periods of fog and by relative humidities approaching 100% </li><br /><li> This disease spores remain in the affected plant debris and in the soil </li><br /><li> Fungal spores can be carried by insects, wind, rain or garden tools</li></ul></string>
    <string name="preventive_text"><ol><li>Select well drained and aerated site for cultivation.</li><br /><li> Maintain proper distance between plants for aeration and minimise leaf moisture.</li><br /><li> Irrigate crop early in the to reduce leaf moisture. use cleaned and sanitised agri tools and machinery.</li><br /> <li>Weeds should be controlled</li></ol></string>
    <string name="mechanical_text"><ol><li>Deep ploughing</li><br /><li> Crop rotation with pulses</li><br /><li> Prune or stake plants and remove any weeds to improve air circulation</li><br /> <li>Weeds should be controlled</li></ol></string>
    <string name="image_error">Please select at least one image</string>
    <string name="land_registration_no">Land registration #</string>
    <string name="land_area">Land Area</string>
    <string name="upload">Upload</string>
    <string name="crop_details">Crop details</string>
    <string name="hectares">hectares</string>
    <string name="meters">meters</string>
    <string name="crop_kg">kg</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="no_advisory">No advisory added</string>
    <string name="all_posts">All posts</string>
    <string name="liked">Liked</string>
    <string name="my_queries">My Queries</string>
    <string name="marketplace_order" translatable="false">market place order\n</string>
    <string name="marketplace_wishlist" translatable="false">market place wishlist\n</string>
    <string name="marketplace_offers" translatable="false">market place offers\n</string>
    <string name="marketplace_cart" translatable="false">market place cart\n</string>
</resources>