<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/navigation_list_farm_scouting_home"
        android:icon="@drawable/ic_my_queries_1"
        android:title="@string/my_queries" />
    <item
        android:id="@+id/navigation_social_wall"
        android:icon="@drawable/ic_farm_talk_menu"
        android:title="@string/bottom_nav_farm_talk" />

    <item
        android:id="@+id/navigation_pop"
        android:icon="@drawable/ic_pop_menu"
        android:title="@string/bottom_nav_pop" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_new"
        android:title="@string/bottom_nav_profile" />
</menu>