<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/actionbar_layerlist"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/seedRate_image_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/seed_rate"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_info" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_seeding_per_area"
                android:textSize="@dimen/font_size_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:hint="@string/country">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/seedRate_autoComplete_country"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_min_height"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:drawableRight="@drawable/ic_dropdown"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:textColorHint="@color/green_bg"
                        android:textSize="@dimen/font_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/crop">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/seedRate_autoComplete_crop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_min_height"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:drawableRight="@drawable/ic_dropdown"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:textColorHint="@color/green_bg"
                        android:textSize="@dimen/font_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:hint="@string/cultivable_area">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/seedRate_autoComplete_area"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_min_height"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:textColorHint="@color/green_bg"
                        android:textSize="@dimen/font_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/seed_variety">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/seedRate_autoComplete_variety"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_min_height"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:drawableRight="@drawable/ic_dropdown"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:textColorHint="@color/green_bg"
                        android:textSize="@dimen/font_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:cardBackgroundColor="#E8EDF1"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/truth_label_details"
                        android:textSize="@dimen/font_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/home_icon_box_margin"
                        android:text="@string/required_plant_populations"
                        android:textSize="@dimen/font_size_normal"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/seedRate_button_continue"
                android:layout_width="match_parent"
                android:minWidth="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_content"
                android:textAllCaps="false"
                android:background="@drawable/button_green_background_curved_border"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/calculate"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/seedRate_linear_bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@mipmap/shadow"
        android:elevation="2dp"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textSize="@dimen/font_size_large"/>

            <TextView
                android:id="@+id/seedRate_text_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_label"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/home_icon_box_margin"
                android:textSize="@dimen/font_size_large"/>

            <TextView
                android:id="@+id/seedRate_text_kgLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_per_hectare"
                android:layout_marginTop="@dimen/home_icon_box_margin"
                android:textSize="@dimen/font_size_large"/>

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/grey_dark"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbs"
                android:textSize="@dimen/font_size_large"/>

            <TextView
                android:id="@+id/seedRate_text_lbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbs_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/home_icon_box_margin"
                android:textSize="@dimen/font_size_large"/>

            <TextView
                android:id="@+id/seedRate_text_lbsLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seed_rate_lbs"
                android:layout_marginTop="@dimen/home_icon_box_margin"
                android:textSize="@dimen/font_size_large"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>