<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/white_background_curved_border"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/iv_pop_bookmark"
        android:src="@drawable/icon_tick"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/complete_profile_btn_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/pop_crop_success"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:singleLine="false"
        android:text="@string/added_crop_to_bookmark"
        app:layout_constraintTop_toBottomOf="@+id/iv_pop_bookmark"
        app:layout_constraintStart_toStartOf="parent"
        android:maxLines="4"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toStartOf="parent"
        android:gravity="center"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:text="@string/drawer_close"
        android:textAllCaps="false"
        android:id="@+id/pop_close"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_crop_success"
        android:background="@drawable/button_orange_background_curved_border"
        android:layout_height="wrap_content"/>


</LinearLayout>